deploy/k8s/deployment.yaml
# Generated by IBM Migration Artifacts Bundler
# Mon Dec 02 10:03:42 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modresorts200war
  name: modresorts200war
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modresorts200war
  template:
    metadata:
      labels:
        app: modresorts200war
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: modresorts200war
          ports:
            - containerPort: 9080
              protocol: TCP
