deploy/k8s/service.yaml
# Generated by IBM Migration Artifacts Bundler
# Mon Dec 02 10:03:42 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modresorts200war
  name: modresorts200war
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: modresorts200war
