deploy/k8s/route.yaml
# Generated by IBM Migration Artifacts Bundler
# Mon Dec 02 10:03:42 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: modresorts200war
  name: modresorts200war
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: modresorts200war
    weight: 100
